# trybot

./: .gitignore  README.md  run_gazebo.sh  run_rviz.sh
6DOF_Cartesian/: CMakeLists.txt  package.xml
nemo/: CMakeLists.txt  package.xml
nemo/launch/: nemo_rviz.launch
nemo/src/: demo_nemoController.cpp
nemo/urdf/: braccio_arm.urdf
orientable_cartesian/: CMakeLists.txt  package.xml
orientable_cartesian/launch/: orientable_cartesian_rviz.launch
orientable_cartesian/src/: demo_Controller.cpp
orientable_cartesian/urdf/: materials.xacro  orientable_cartesian.xacro  prueba.xacro
simplebot/: CMakeLists.txt  clean.sh  package.xml
simplebot/config/: simplebot.yaml
simplebot/launch/: simplebot_gazebo.launch  simplebot_gzcontrol.launch
simplebot/urdf/: backup.urdf  simplebot.urdf
trybot_control/: CMakeLists.txt  package.xml
trybot_control/config/: trybot_control.yaml
trybot_control/launch/: trybot_control.launch
trybot_control/src/: jointPublisher.cpp  jointRvizPublisher.cpp
trybot_description/: CMakeLists.txt  package.xml
trybot_description/launch/: trybot.rviz  trybot_rviz.launch
trybot_description/urdf/: trybot.gazebo  trybot.xacro
trybot_gazebo/: CMakeLists.txt  package.xml
trybot_gazebo/launch/: trybot_gzcontrol.launch  trybot_world.launch
